--- a/Дым/ru.lproj/LaunchScreen.storyboard
+++ b/Дым/ru.lproj/LaunchScreen.storyboard
@@ -17,8 +17,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tabBar contentMode="scaleToFill" fixedFrame="YES" barStyle="black" translatesAutoresizingMaskIntoConstraints="NO" id="QS2-or-Gck">
-                                <rect key="frame" x="0.0" y="500" width="600" height="49"/>
+                            <tabBar contentMode="scaleToFill" barStyle="black" translatesAutoresizingMaskIntoConstraints="NO" id="QS2-or-Gck">
+                                <rect key="frame" x="0.0" y="551" width="600" height="49"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <items>
                                     <tabBarItem title="Меню" image="top_charts" id="5cq-7a-ZzI"/>
@@ -29,6 +29,11 @@
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="QS2-or-Gck" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="N3q-zN-HST"/>
+                            <constraint firstItem="QS2-or-Gck" firstAttribute="bottom" secondItem="xb3-aO-Qok" secondAttribute="top" id="YdP-YD-kLW"/>
+                            <constraint firstAttribute="trailing" secondItem="QS2-or-Gck" secondAttribute="trailing" id="fZc-Pr-LNf"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
