--- a/Дым/ru.lproj/Main.storyboard
+++ b/Дым/ru.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Menu Detail Product View Controller-->
@@ -311,11 +312,11 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backgroundLayer.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="VVQ-FE-DFR">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </imageView>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cAq-jU-fkf">
-                                <rect key="frame" x="9" y="72" width="302" height="63"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cAq-jU-fkf">
+                                <rect key="frame" x="20" y="72" width="560" height="63"/>
                                 <subviews>
-                                    <view alpha="0.29999999999999999" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Yz4-Nt-ayN">
-                                        <rect key="frame" x="11" y="6" width="275" height="52"/>
+                                    <view alpha="0.29999999999999999" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yz4-Nt-ayN">
+                                        <rect key="frame" x="8" y="6" width="544" height="52"/>
                                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -323,8 +324,25 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </view>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1xj-GD-ODW">
-                                        <rect key="frame" x="16" y="13" width="216" height="37"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v1s-eO-pzn">
+                                        <rect key="frame" x="500" y="12" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="40" id="t1z-Zj-neB"/>
+                                        </constraints>
+                                        <state key="normal" image="close"/>
+                                        <connections>
+                                            <action selector="specialsHideButton:" destination="9pv-A4-QxB" eventType="touchUpInside" id="vhd-cI-KTj"/>
+                                        </connections>
+                                    </button>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nfE-l3-357">
+                                        <rect key="frame" x="500" y="12" width="40" height="40"/>
+                                        <state key="normal" image="warning"/>
+                                        <connections>
+                                            <action selector="specialsShowButton:" destination="9pv-A4-QxB" eventType="touchUpInside" id="Ybd-iT-OyF"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1xj-GD-ODW">
+                                        <rect key="frame" x="15" y="13" width="475" height="37"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <state key="normal" title="Специальные предложения">
@@ -334,53 +352,73 @@
                                             <segue destination="Xdr-ir-OSh" kind="show" identifier="showSpecialsSegue" id="YPT-lx-CP7"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v1s-eO-pzn">
-                                        <rect key="frame" x="240" y="11" width="40" height="40"/>
-                                        <state key="normal" image="close"/>
-                                        <connections>
-                                            <action selector="specialsHideButton:" destination="9pv-A4-QxB" eventType="touchUpInside" id="vhd-cI-KTj"/>
-                                        </connections>
-                                    </button>
-                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nfE-l3-357">
-                                        <rect key="frame" x="240" y="11" width="40" height="40"/>
-                                        <state key="normal" image="warning"/>
-                                        <connections>
-                                            <action selector="specialsShowButton:" destination="9pv-A4-QxB" eventType="touchUpInside" id="Ybd-iT-OyF"/>
-                                        </connections>
-                                    </button>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstItem="nfE-l3-357" firstAttribute="top" secondItem="cAq-jU-fkf" secondAttribute="top" constant="12" id="5oc-bb-ljq"/>
+                                    <constraint firstItem="v1s-eO-pzn" firstAttribute="bottom" secondItem="nfE-l3-357" secondAttribute="bottom" id="6Ko-av-6y2"/>
+                                    <constraint firstItem="1xj-GD-ODW" firstAttribute="centerY" secondItem="cAq-jU-fkf" secondAttribute="centerY" id="Ij3-A2-w14"/>
+                                    <constraint firstItem="v1s-eO-pzn" firstAttribute="leading" secondItem="nfE-l3-357" secondAttribute="leading" id="Jbf-hU-HAq"/>
+                                    <constraint firstItem="nfE-l3-357" firstAttribute="leading" secondItem="1xj-GD-ODW" secondAttribute="trailing" constant="10" id="JfJ-hR-Qi8"/>
+                                    <constraint firstItem="Yz4-Nt-ayN" firstAttribute="leading" secondItem="cAq-jU-fkf" secondAttribute="leadingMargin" id="SqC-nf-Zvd"/>
+                                    <constraint firstItem="1xj-GD-ODW" firstAttribute="centerY" secondItem="v1s-eO-pzn" secondAttribute="centerY" id="aW1-la-ha6"/>
+                                    <constraint firstAttribute="height" constant="63" id="ahg-hC-NYf"/>
+                                    <constraint firstItem="Yz4-Nt-ayN" firstAttribute="top" secondItem="cAq-jU-fkf" secondAttribute="top" constant="6" id="c9h-Zk-Uct"/>
+                                    <constraint firstItem="Yz4-Nt-ayN" firstAttribute="trailing" secondItem="cAq-jU-fkf" secondAttribute="trailingMargin" id="d5I-tJ-ykf"/>
+                                    <constraint firstAttribute="trailing" secondItem="v1s-eO-pzn" secondAttribute="trailing" constant="20" id="giH-Od-toj"/>
+                                    <constraint firstItem="Yz4-Nt-ayN" firstAttribute="centerY" secondItem="1xj-GD-ODW" secondAttribute="centerY" id="iCy-Ew-YHh"/>
+                                    <constraint firstItem="v1s-eO-pzn" firstAttribute="top" secondItem="nfE-l3-357" secondAttribute="top" id="j5g-8I-ubh"/>
+                                    <constraint firstItem="v1s-eO-pzn" firstAttribute="trailing" secondItem="nfE-l3-357" secondAttribute="trailing" id="oKx-Z0-r93"/>
+                                    <constraint firstItem="1xj-GD-ODW" firstAttribute="leading" secondItem="cAq-jU-fkf" secondAttribute="leading" constant="15" id="x32-sd-QjY"/>
+                                    <constraint firstItem="1xj-GD-ODW" firstAttribute="top" secondItem="cAq-jU-fkf" secondAttribute="top" constant="13" id="z6h-ec-0EH"/>
+                                </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7pt-iJ-pEs">
-                                <rect key="frame" x="110" y="398" width="100" height="100"/>
-                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <state key="normal" image="teacup"/>
-                                <connections>
-                                    <segue destination="gF8-28-OA7" kind="show" identifier="teaSegueID" id="yJ7-Z9-yI5"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YJH-ej-YLZ">
-                                <rect key="frame" x="110" y="274" width="100" height="100"/>
-                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <state key="normal" image="tobacco"/>
-                                <connections>
-                                    <segue destination="gF8-28-OA7" kind="show" identifier="tobaccoSegueID" id="aT7-P9-lNn"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hl9-97-H4F">
-                                <rect key="frame" x="110" y="153" width="100" height="100"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hl9-97-H4F">
+                                <rect key="frame" x="240" y="143" width="120" height="120"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <state key="normal" image="hookah"/>
                                 <connections>
                                     <segue destination="gF8-28-OA7" kind="show" identifier="hookahSegueID" id="TPR-zs-HAH"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YJH-ej-YLZ">
+                                <rect key="frame" x="240" y="283" width="120" height="120"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" image="tobacco"/>
+                                <connections>
+                                    <segue destination="gF8-28-OA7" kind="show" identifier="tobaccoSegueID" id="aT7-P9-lNn"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7pt-iJ-pEs">
+                                <rect key="frame" x="240" y="423" width="120" height="120"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" image="teacup"/>
+                                <connections>
+                                    <segue destination="gF8-28-OA7" kind="show" identifier="teaSegueID" id="yJ7-Z9-yI5"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="7pt-iJ-pEs" secondAttribute="bottom" constant="8" symbolic="YES" id="17V-xE-Lej"/>
                             <constraint firstItem="VVQ-FE-DFR" firstAttribute="centerX" secondItem="tsR-hK-woN" secondAttribute="centerX" id="8tq-EO-eJe"/>
+                            <constraint firstItem="YJH-ej-YLZ" firstAttribute="height" secondItem="7pt-iJ-pEs" secondAttribute="height" id="BTj-0O-RMm"/>
                             <constraint firstItem="VVQ-FE-DFR" firstAttribute="height" secondItem="tsR-hK-woN" secondAttribute="height" id="FbD-Ib-GEJ"/>
+                            <constraint firstItem="Hl9-97-H4F" firstAttribute="top" secondItem="cAq-jU-fkf" secondAttribute="bottom" constant="8" symbolic="YES" id="Hkx-jv-Z2N"/>
+                            <constraint firstItem="7pt-iJ-pEs" firstAttribute="top" secondItem="YJH-ej-YLZ" secondAttribute="bottom" constant="20" id="OyS-6Z-xI5"/>
+                            <constraint firstItem="YJH-ej-YLZ" firstAttribute="trailing" secondItem="7pt-iJ-pEs" secondAttribute="trailing" id="WMH-0V-9Vm"/>
+                            <constraint firstItem="Hl9-97-H4F" firstAttribute="leading" secondItem="YJH-ej-YLZ" secondAttribute="leading" id="Wqu-na-T6q"/>
+                            <constraint firstItem="YJH-ej-YLZ" firstAttribute="top" secondItem="Hl9-97-H4F" secondAttribute="bottom" constant="20" id="Xsz-Gh-HoE"/>
+                            <constraint firstItem="Hl9-97-H4F" firstAttribute="centerX" secondItem="cAq-jU-fkf" secondAttribute="centerX" id="cRh-IJ-PQ4"/>
+                            <constraint firstItem="Hl9-97-H4F" firstAttribute="width" secondItem="YJH-ej-YLZ" secondAttribute="width" id="hOr-6R-arC"/>
+                            <constraint firstItem="7pt-iJ-pEs" firstAttribute="leading" secondItem="YJH-ej-YLZ" secondAttribute="leading" id="lfB-Fx-Ctf"/>
+                            <constraint firstItem="YJH-ej-YLZ" firstAttribute="width" secondItem="7pt-iJ-pEs" secondAttribute="width" id="pWd-Ek-ncu"/>
+                            <constraint firstItem="cAq-jU-fkf" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" id="pxE-V8-YmQ"/>
+                            <constraint firstItem="cAq-jU-fkf" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" constant="8" symbolic="YES" id="s4O-cc-RZk"/>
+                            <constraint firstItem="Hl9-97-H4F" firstAttribute="height" secondItem="YJH-ej-YLZ" secondAttribute="height" id="sBf-ek-Irz"/>
+                            <constraint firstItem="Hl9-97-H4F" firstAttribute="trailing" secondItem="YJH-ej-YLZ" secondAttribute="trailing" id="uFd-sl-7dj"/>
                             <constraint firstItem="VVQ-FE-DFR" firstAttribute="width" secondItem="tsR-hK-woN" secondAttribute="width" id="uc4-IR-Jmw"/>
                             <constraint firstItem="VVQ-FE-DFR" firstAttribute="centerY" secondItem="tsR-hK-woN" secondAttribute="centerY" id="usV-K8-7Kr"/>
+                            <constraint firstItem="cAq-jU-fkf" firstAttribute="centerX" secondItem="VVQ-FE-DFR" secondAttribute="centerX" id="yMO-BP-9Dt"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="EXM-cw-U4m">
